--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,8 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.sosapp"
-        minSdkVersion 22
+        applicationId "com.example.sos_app_ui"
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
