developed other the rest of configuration panels: added message configuration section and interactive list of warning message receivers (need to attach remove-from-list button), last activity panel has been cleared

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.configuration.PopActivity"></activity>
+        <activity android:name=".ui.configuration.ContactsList"></activity>
+        <activity
+            android:name=".ui.configuration.WarningTargets"
+            android:label="@string/title_activity_warning_targets"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ui.configuration.MessagePanel"
+            android:label="@string/title_activity_message_panel"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ui.configuration.PopActivity" />
         <activity
             android:name=".ui.configuration.AdditionalSettingsPanel"
             android:label="@string/title_activity_additional_settings_panel"
