--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!-- Splash screen -->
+        <activity
+            android:name=".SplashActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black.NoTitleBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <!-- Main activity -->
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:theme="@style/AppTheme">
+<!--            android:label="@string/app_name"-->
+<!--            android:icon="@drawable/logo_white">-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,5 +37,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
