--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,9 +34,26 @@
             android:name=".ui.configuration.PersonalDataPanel"
             android:label="@string/title_activity_personal_data_panel"
             android:theme="@style/AppTheme.NoActionBar" />
+
+        <!-- Splash activity -->
+        <activity
+            android:name=".SplashActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black.NoTitleBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <!-- Main activity -->
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:theme="@style/AppTheme">
+            <!--            android:label="@string/app_name"-->
+            <!--            android:icon="@drawable/logo_white">-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
