--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sos_app_ui">
-    <uses-permission android:name = "android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name = "android.permission.READ_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-    <uses-feature android:name="android.hardware.sensor.gyroscope" android:required="true" />
-    <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" />
+    <uses-feature
+        android:name="android.hardware.sensor.gyroscope"
+        android:required="true" />
+    <uses-feature
+        android:name="android.hardware.sensor.accelerometer"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -16,7 +21,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.configuration.ContactsList"></activity>
+        <activity
+            android:name=".ui.configuration.MainConfigurationMenu"
+            android:label="@string/title_activity_main_configuration_menu"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".ui.configuration.ContactsList" />
         <activity
             android:name=".ui.configuration.WarningTargets"
             android:label="@string/title_activity_warning_targets"
@@ -33,27 +42,24 @@
         <activity
             android:name=".ui.configuration.PersonalDataPanel"
             android:label="@string/title_activity_personal_data_panel"
-            android:theme="@style/AppTheme.NoActionBar" />
-
-        <!-- Splash activity -->
+            android:theme="@style/AppTheme.NoActionBar" /> <!-- Splash activity -->
         <activity
             android:name=".SplashActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Black.NoTitleBar" >
+            android:theme="@android:style/Theme.Black.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- Main activity -->
+        </activity> <!-- Main activity -->
         <activity
             android:name=".MainActivity"
             android:theme="@style/AppTheme">
-            <!--            android:label="@string/app_name"-->
-            <!--            android:icon="@drawable/logo_white">-->
+
+            <!-- android:label="@string/app_name" -->
+            <!-- android:icon="@drawable/logo_white"> -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
