--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,10 +21,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".ui.configuration.MainConfigurationMenu"
-            android:label="@string/title_activity_main_configuration_menu"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".ui.configuration.CreateNewConfiguration"></activity>
         <activity android:name=".ui.configuration.ContactsList" />
         <activity
             android:name=".ui.configuration.WarningTargets"
