--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.configuration.CreateNewConfiguration"></activity>
+        <activity android:name=".ui.configuration.ConfigFileChecker"></activity>
+        <activity android:name=".ui.configuration.CreateNewConfiguration" />
         <activity android:name=".ui.configuration.ContactsList" />
         <activity
             android:name=".ui.configuration.WarningTargets"
